svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-grpc-greeter-server
  namespace: default
  selfLink: /api/v1/namespaces/default/services/go-grpc-greeter-server
  uid: c9817b63-0dfb-4225-9194-0bf5f6931bab
  resourceVersion: '5767'
  creationTimestamp: '2022-08-08T18:17:59Z'
  labels:
    app: go-grpc-greeter-server
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"go-grpc-greeter-server"},"name":"go-grpc-greeter-server","namespace":"default"},"spec":{"ports":[{"nodePort":31117,"port":80,"protocol":"TCP","targetPort":50051}],"selector":{"app":"go-grpc-greeter-server"},"type":"NodePort"}}
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: v1
      time: '2022-08-08T18:17:59Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:externalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":80,"protocol":"TCP"}:
              .: {}
              f:nodePort: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50051
      nodePort: 31117
  selector:
    app: go-grpc-greeter-server
  clusterIP: 10.10.37.234
  clusterIPs:
    - 10.10.37.234
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
